# Coizera

./: buildings.py  enemies.py  items.py  long_init_stuff.py  main.py  player.py  pyproject.toml
coizera/: .#sfx.py  buildings.py  effects.py  enemies.py  events.py  game_state.py  items.py  main.py  player.py  projectile.py  pubsub.py  sfx.py  ui.py  weapon.py
conductor/: tracks.md
conductor/tracks/docs-gherkin-use-cases/: plan.md
conductor/tracks/sprite-refactoring/: plan.md
conductor/tracks/ui-refactoring/: plan.md
docs/: user_features.md
